authz/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    istio-injection: enabled
