authz/2-policy-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: security
  name: policy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-manager
  template:
    metadata:
      labels:
        app: policy-manager
    spec:
      containers:
      - name: policy-manager
        imagePullPolicy: Always
        image: leviditomazzo/policy-manager:v1
---
apiVersion: v1
kind: Service
metadata:
  namespace: security
  name: service-policy-manager
spec:
  selector:
    app: policy-manager
  ports:
    - name: http
      port: 3003
      nodePort: 30078
  type: NodePort
