authz/3-admission-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: security
  name: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - name: webhook-server
        imagePullPolicy: Never
        image: leviditomazzo/admission-controller-k8s:v6
        volumeMounts:
          - readOnly: true
            mountPath: /configMap
            name: inject-container
      volumes:
        - name: inject-container
          configMap:
            name: inject-container
---
apiVersion: v1
kind: Service
metadata:
  namespace: security
  name: webhook-service
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: webhook-server
