authz/3-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  namespace: security
  name: webhook
webhooks:
  - name: webhook-service.security.svc
    failurePolicy: Fail
    objectSelector:
      # matchLabels:
      #   authz-injection: enabled
      matchExpressions:
        - {key: type, operator: NotIn, values: [front-end, data-base]}

    clientConfig:
      service:
        name: webhook-service
        namespace: security
        path: "/mutate"
      #this is base64 encode of rootCA.crt `cat rootCA.crt | base64 | tr -d '\n'`
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUY0akNDQThxZ0F3SUJBZ0lKQVBaUXdKZkdVcFRTTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdGTVFzd0NRWUQKVlFRR0V3SkNVakVWTUJNR0ExVUVDQXdNVThPRHdxTnZJRkJoZFd4dk1SWXdGQVlEVlFRSERBMVR3NFBDbzI4ZwpVR0YxYkc4Z01SWXdGQVlEVlFRS0RBMURiM0p3SUZObFkzVnlhWFI1TVJZd0ZBWURWUVFMREExSlZDQkVaWEJoCmNuUnRaVzUwTVJjd0ZRWURWUVFEREE0cUxuTmxZM1Z5YVhSNUxuTjJZekFlRncweU1EQTJNakF3TkRJeE5ESmEKRncweU16QTBNVEF3TkRJeE5ESmFNSUdGTVFzd0NRWURWUVFHRXdKQ1VqRVZNQk1HQTFVRUNBd01VOE9Ed3FOdgpJRkJoZFd4dk1 [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        authz-injection: enabled
